--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
+    {
+      "locator": "https://github.com/katzer/cordova-plugin-local-notifications.git",
+      "id": "de.appplant.cordova.plugin.local-notification"
+    },
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
