--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 node_modules/
 platforms/
+!platforms/android/build/outputs/*
+!platforms/ios/build/outputs/*
+
 plugins/
 www/js/data.js
 www/js/data_clicked.js
