--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.2.4"
   },
   "dependencies": {
-    "ngCordova": "^0.1.24-alpha",
+    "ngCordova": "~0.1.27-alpha",
     "angular-local-storage": "^0.2.5"
   }
 }
